# pill-counter

./: .gitignore  AGENTS.md  gemi_cli.py  next.config.ts  opencode.json  package.json  pnpm-lock.yaml  proto_cli.py  pyproject.toml  watershed_tutorial.ipynb
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.opencode/: gsd-file-manifest.json  gsd-install-state.json  opencode.json
.opencode/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  (+5 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
app/: layout.tsx  page.tsx
components/: annotated-image.tsx  image-picker.tsx  result-display.tsx
docs/: count_flow.md  pill-counter-plan.md  proto_cli.md  specs.md  tech-stack.md  user_specs.md
lib/: compress.ts  gemini.ts  opencv-init.ts  openrouter.ts  pill-common.ts  pill-cv-config.ts  pill-cv.ts  types.ts
notebooks/: watershed_test.ipynb
pill_counter/: annotator.py  batch.py  cli.py  config.py  pipeline.py
plans/: implement_plan.md  research_pill_cv.md  tuning-improve.md
tests/: test_cli.py  test_pipeline.py
(+232 files in other folders)
