[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pill-counter"
version = "0.1.0"
description = "Standalone CLI tool for batch pill counting using classical computer vision (OpenCV)"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0",
    "numpy>=2.4.0",
    "tqdm>=4.67.0",
]

[project.scripts]
pill-counter = "pill_counter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
